Fix up input path following folder restructure

--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -6,11 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Inputs\Day1Input.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Inputs\Day1Input.txt">
+    <Content Include="Days\Day1\Day1Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
