--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Remove="Days\Day2\Day2Input.txt" />
+    <None Remove="Days\Day3\Day3Input.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -14,6 +15,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Days\Day2\Day2Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Days\Day3\Day3Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
