--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -11,6 +11,8 @@
     <None Remove="Days\Day4\Day4Input.txt" />
     <None Remove="Days\Day5\Day5Input.txt" />
     <None Remove="Days\Day6\Day6Input.txt" />
+    <None Remove="Days\Day7\Day7ExampleInput.txt" />
+    <None Remove="Days\Day7\Day7Input.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +32,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Days\Day6\Day6Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Days\Day7\Day7ExampleInput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Days\Day7\Day7Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
