--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -13,6 +13,8 @@
     <None Remove="Days\Day6\Day6Input.txt" />
     <None Remove="Days\Day7\Day7ExampleInput.txt" />
     <None Remove="Days\Day7\Day7Input.txt" />
+    <None Remove="Days\Day8\Day8ExampleInput.txt" />
+    <None Remove="Days\Day8\Day8Input.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +40,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Days\Day7\Day7Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Days\Day8\Day8ExampleInput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Days\Day8\Day8Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
