--- a/AdventOfCode2022.Tests/AdventOfCode2022.Tests.csproj
+++ b/AdventOfCode2022.Tests/AdventOfCode2022.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Day8ExampleInput.txt">
+    <Content Include="Days\Day8\Day8ExampleInput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
