--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -15,6 +15,8 @@
     <None Remove="Days\Day7\Day7Input.txt" />
     <None Remove="Days\Day8\Day8ExampleInput.txt" />
     <None Remove="Days\Day8\Day8Input.txt" />
+    <None Remove="Days\Day9\Day9ExampleInput.txt" />
+    <None Remove="Days\Day9\Day9Input.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +48,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Days\Day8\Day8Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Days\Day9\Day9ExampleInput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Days\Day9\Day9Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
